src/core-crm/objects/Giving_Interest__c/Giving_Interest__c.object-meta.xml
<CustomObject>
    <description>Captures data about the giving interest categories a Contact may be interested in donating to.</description>
    <label>Giving Interest</label>
    <nameField>
        <displayFormat>GI-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Giving Interests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>