src/core-crm/objects/Giving_Interest__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Account.</description>
    <inlineHelpText>Lookup to Account.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Giving Interests</relationshipLabel>
    <relationshipName>Giving_Interests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>