src/core-crm/objects/Giving_Interest__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Contact.</description>
    <inlineHelpText>Lookup to Contact.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Giving Interests</relationshipLabel>
    <relationshipName>Giving_Interests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>