src/core-crm/objects/Giving_Interest__c/fields/Interest__c.field-meta.xml
<CustomField>
    <fullName>Interest__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Lookup to Interest.</description>
    <inlineHelpText>Lookup to Interest.</inlineHelpText>
    <label>Interest</label>
    <referenceTo>Interest__c</referenceTo>
    <relationshipLabel>Giving Interests</relationshipLabel>
    <relationshipName>Giving_Interests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>